--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "styled-components": "^5.0.1"
   },
   "scripts": {
-    "start:dev": "react-scripts start",
-    "start": "react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
